
2000-12-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can validate on integer
Now you can validate on text length ( when value is a string)
Add RANDBETWEEN function

2000-12-05-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide/show column/row

2000-12-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can configure the number of page when you begin kspread (when you don't specify
a file name)

2000-12-11-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide/show col/row header

2000-12-18-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can define what you want to write in statusbar when you select
an area:
	sum
	average
	count
	min
	max
you can configure it in "Configure dialogBox" -> misc

2000-12-27-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can see what you print with "Preview"
I used ghostview.

2000-12-29-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can change default grid color
-Undo works when you change type of cell (combobox, button, normal)
-Add "Selection List"


2001-01-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can "don't print a text"
used "cell layout" dialogbox -> misc -> "don't print text"

2001-01-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can create "Sort list" for autofill

2001-01-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Add new functions : ISDATE ISTIME DECSEX (convert decimal to time value)
SEXDEC( converts time value to decimal)